java/lang/invoke/SpecialInterfaceCall fails with SIGILL on aarch64

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b16
    • aarch64

        fastdebug build fails with this hs_err:
          http://cr.openjdk.java.net/~shade/8203699/hs_err-1.log

        # SIGILL (0x4) at pc=0x0000ffff94dba74c, pid=18011, tid=18022

          0x0000ffff94dba744: str x11, [x10,#32]
          0x0000ffff94dba748: b 0x0000ffff94dba750
          0x0000ffff94dba74c: hlt #0x0 <----- here
          0x0000ffff94dba750: ldr w12, [xmethod,#36]
          0x0000ffff94dba754: ldr xmethod, [xmethod,#16]

        This seems to be the proper hlt failure due to failing check in VerifyMethodHandles block at MethodHandles::generate_method_handle_dispatch:

              if (VerifyMethodHandles && iid != vmIntrinsics::_linkToInterface) {
                Label L_ok;
                Register temp2_defc = temp2;
                __ load_heap_oop(temp2_defc, member_clazz, temp3);
                load_klass_from_Class(_masm, temp2_defc);
                __ verify_klass_ptr(temp2_defc);
                __ check_klass_subtype(temp1_recv_klass, temp2_defc, temp3, L_ok);
                // If we get here, the type check failed!
                __ hlt(0);
                // __ STOP("receiver class disagrees with MemberName.clazz");
                __ bind(L_ok);
              }
              BLOCK_COMMENT("} check_receiver");

              Assignee:
              Andrew Dinn
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: