8203699: java/lang/invoke/SpecialInterfaceCall fails with SIGILL on aarch64

Fastdebug build fails with SIGILL

Reviewed-by: shade, drwhite, aph